--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "three": "^0.164.1"
   },
   "devDependencies": {
+    "lite-server": "^2.6.1",
     "vite": "^5.2.10"
   },
   "name": "kliu0020.github.io",
